# better-auth-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  better-auth.yaml
compat-tests/: README.md
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/plugins/: account_management.rs  device_authorization.rs  email_password.rs  helpers.rs  mod.rs  session_management.rs  two_factor.rs
crates/api/src/plugins/admin/: access.rs  handlers.rs  mod.rs  tests.rs  types.rs
crates/api/src/plugins/api_key/: handlers.rs  mod.rs  tests.rs  types.rs
crates/api/src/plugins/device_authorization/: mod.rs  tests.rs  types.rs
crates/api/src/plugins/email_verification/: handlers.rs  mod.rs  tests.rs
crates/api/src/plugins/oauth/: encryption.rs  handlers.rs  mod.rs  providers.rs  state.rs  tests.rs  types.rs
crates/api/src/plugins/organization/: mod.rs  rbac.rs  types.rs
crates/api/src/plugins/organization/handlers/: invitation.rs  member.rs  mod.rs  org.rs
crates/api/src/plugins/passkey/: handlers.rs  mod.rs  tests.rs  types.rs  webauthn.rs
crates/api/src/plugins/password_management/: handlers.rs  mod.rs  tests.rs  types.rs
crates/api/src/plugins/two_factor/: mod.rs  tests.rs
crates/api/src/plugins/user_management/: handlers.rs  mod.rs  tests.rs
crates/api/tests/: account_oauth_tests.rs  device_authorization_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: generate.rs  main.rs
crates/cli/src/templates/: auth_schema.rs.tmpl
crates/seaorm/: Cargo.toml
crates/seaorm/src/: conversions.rs  hooks.rs  lib.rs  schema.rs  types.rs
crates/seaorm/src/store/: accounts.rs  api_keys.rs  device_codes.rs  migrator.rs  mod.rs  organizations.rs  passkeys.rs  sessions.rs  two_factor.rs  users.rs  verifications.rs
crates/seaorm/src/store/entities/: device_code.rs  mod.rs  passkey.rs  two_factor.rs
docs/: better-auth.json
examples/: README.md  axum_server.rs  postgres_usage.rs
migrations/: 006_create_device_table.sql
scripts/: alignment-check.sh  generate-openapi-matrix.mjs
src/: lib.rs  plugins.rs  prelude.rs  schema.rs  store.rs
tests/: architecture_guard_tests.rs  axum_integration_tests.rs  client_compat_tests.rs  compat_admin_stateful_tests.rs  compat_admin_tests.rs  compat_coverage_tests.rs  compat_endpoint_tests.rs  compat_field_tests.rs  compat_organization_tests.rs  compat_passkey_tests.rs  compat_unit_tests.rs  (+13 more)
(+155 files in other folders)
