[package]
name = "better-auth-api"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Plugin implementations for better-auth"
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
better-auth-core = { workspace = true }

# Asynchronous runtime
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Validation
validator = { workspace = true }

# Time handling
chrono = { workspace = true }

# Cookie handling
cookie = { workspace = true }

# Data structures
uuid = { workspace = true }

# Crypto
argon2 = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
totp-rs = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# URL
url = { workspace = true }
urlencoding = "2"
bon = "3.3"
nonzero_ext = "0.3.0"
axum = { workspace = true, optional = true }
jsonwebtoken.workspace = true
serde_with = "3.18.0"
webauthn-rs = { version = "0.5.4", features = ["conditional-ui", "danger-allow-state-serialisation"] }
serde_cbor_2 = "0.13.0"

[dev-dependencies]
tokio = { workspace = true }
better-auth-seaorm = { workspace = true }

[features]
default = ["native-tls"]
native-tls = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]
axum = ["dep:axum", "better-auth-core/axum"]
