[package]
name = "better-auth-seaorm"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "SeaORM integration for better-auth"
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
better-auth-core = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
